# stateguard

./: .gitignore  CHANGELOG.md  LICENSE  M9_1_RELEASE_REPORT.md  M9_AUDIT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  runner.py
benchmarks/cases/: 01_exact_alias.json  02_fuzzy_rename.json  03_type_coercion.json  04_default_fill.json  05_nested_2level.json  06_nested_3level.json  07_unrecoverable.json  08_already_valid.json  09_partial_repair.json
src/stateguard/: __init__.py  cli.py  guard.py
src/stateguard/adapters/: __init__.py  dict_adapter.py
src/stateguard/adapters/pydantic/: __init__.py  adapter.py  extractor.py  type_mapper.py  violation_mapper.py
src/stateguard/core/: __init__.py  engine.py  validator.py
src/stateguard/core/errors/: __init__.py  operations.py  results.py  violations.py
src/stateguard/core/interfaces/: __init__.py  adapter.py  strategy.py
src/stateguard/core/models/: __init__.py  config.py  contract.py  field_types.py
src/stateguard/core/strategies/: __init__.py  alias.py  coerce.py  default_fill.py  fuzzy.py  registry.py
src/stateguard/logging/: __init__.py  logger.py  repair_history.py
src/stateguard/telemetry/: __init__.py  hooks.py  noop.py
tests/: conftest.py  test_benchmark_runner.py  test_cli.py  test_guard.py  test_public_api.py
tests/adapters/: __init__.py  test_dict_adapter.py
tests/adapters/pydantic/: __init__.py  conftest.py  test_adapter.py  test_extractor.py  test_type_mapper.py  test_violation_mapper.py
tests/core/: conftest.py  test_engine.py  test_engine_nested.py  test_validator.py
tests/core/errors/: test_operations.py  test_results.py  test_violations.py
tests/core/models/: test_config.py  test_contract.py  test_field_types.py
tests/core/strategies/: __init__.py  test_alias_strategy.py  test_coerce_strategy.py  test_default_fill_strategy.py  test_fuzzy_strategy.py  test_registry.py
tests/integration/: conftest.py  test_full_repair_flow.py
tests/isolation/: test_import_isolation.py
tests/logging/: test_repair_history.py
